Updated the download page to point to the new 1.2.11 relax release.
Only GNU/Linux and source packages have been release so far.  The 'Old releases' download page
section has been extended to include links, md5sums, GPG sigs, and file sizes for versions 1.3.0,
1.2.11, and 1.2.10.  In the future, all relax packages will be listed here.

--- a/download.html
+++ b/download.html
@@ -60,13 +60,53 @@
 </div>
 
 <div class="main">
+<!-- Current release -->
   <div class="main_box">
     <h1>Current stable release</h1>
 
+
+
+<!-- General info -->
+    <div class="main_h2">
+      <h2>General information</h2>
+
+      <p>The current stable release is relax version 1.2.11.</p>
+
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  However if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
+
+      <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
+    </div>
+
+
+
+<!-- GNU Linux -->
     <div class="main_h2">
       <h2>GNU/Linux</h2>
 
-      <p>The current pre-compiled binary release for GNU/Linux on i686 machines can be downloaded from <a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a>.  The GPG signature can be found at <a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">relax-1.2.10.GNU-Linux.i686.tar.bz2.sig</a> (see the Security section below).  For all other architectures please download the source release below.</p>
+      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32 bit (i686) and 64 bit (x86_64) machines.</p>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4272519</td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4278051</td>
+    </tr>
+  </tbody>
+</table>
 
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
@@ -77,9 +117,29 @@
           </ul>
     </div>
 
+
+
+<!-- MS Windows -->
     <div class="main_h2">
       <h2>MS Windows</h2>
-      <p>The pre-compiled binary release for Windows (32 bit) can be downloaded from <a href='http://download.gna.org/relax/relax-1.2.10.Win32.zip'>relax-1.2.10.Win32.zip</a>.  The GPG signature is located at <a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip.sig" title="relax GPG signature">relax-1.2.10.Win32.zip.sig</a> (see the Security section below).  For 64 bit Windows please download the source release below.</p>
+      <p>The pre-compiled binary release for 32 and 64 bit Windows can be downloaded from the link below.</p>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip" title="relax">relax-1.2.10.Win32.zip</a></td>
+      <td><tt><small>e28724a7c8282b927be9705f83d36d49</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4511199</td>
+    </tr>
+  </tbody>
+</table>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
@@ -94,6 +154,9 @@
          <p>To execute relax, both the relax and Python installation directories will need to be added to the system path.  For MS Windows the instructions for modifying the system path are given <a href="windows_devel.html#path">here</a>.</p>
     </div>
 
+
+
+<!-- Mac OS X -->
     <div class="main_h2">
       <h2>Mac OS X</h2>
         <p>There are currently no pre-compiled binary releases for Mac OS X.  To use relax under OS X please download the source package below.  Unfortunately this will mean that, unless compiled using a C compiler, the exponential relaxation curve fitting component of relax will be unavailable.  If you use relax on OS X and would like to help the relax project by providing pre-compiled binary packages, please contact the <a href="communication.html#relax-devel">relax-devel mailing list</a>.</p>
@@ -106,6 +169,9 @@
           </ul>
     </div>
 
+
+
+<!-- Source code -->
     <div class="main_h2">
       <h2>Source code release (for all other systems)</h2>
 
@@ -114,19 +180,25 @@
 <table cellspacing="10">
   <tbody>
     <tr>
-      <td><strong>File type</strong></td>
       <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
     </tr>
+    <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td>Bzip2 compressed TAR file</td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2" title="relax">relax-1.2.10.src.tar.bz2</a></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2.sig" title="relax GPG signature">relax-1.2.10.src.tar.bz2.sig</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
+      <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4271529</td>
     </tr>
+
+    <tr><td>Zip file</td></tr>
     <tr>
-      <td>Zip file</td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip" title="relax">relax-1.2.10.src.zip</a></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip.sig" title="relax GPG signature">relax-1.2.10.src.zip.sig</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip" title="relax">relax-1.2.11.src.zip</a></td>
+      <td><tt><small>ff5647b89dbd89f2997bf02b444fc08c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4543086</td>
     </tr>
   </tbody>
 </table>
@@ -153,6 +225,9 @@
    </div>
   </div>
 
+
+
+<!-- All current releases -->
 <div class="main_box">
       <h1>All current releases</h1>
 
@@ -166,25 +241,25 @@
     </tr>
     <tr><td><em>Unstable 1.3 development line</em></td></tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>4445951</td>
     </tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip" title="relax">relax-1.3.0.Win32.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip" title="relax">relax-1.3.0.Win32.zip</a></td>
       <td><tt><small>b788b38fecee772fe758897a80563205</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
       <td>4708018</td>
     </tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2" title="relax">relax-1.3.0.src.tar.bz2</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2" title="relax">relax-1.3.0.src.tar.bz2</a></td>
       <td><tt><small>ae89221310d0c2ce84f5235d847f1001</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>4439939</td>
     </tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip" title="relax">relax-1.3.0.src.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip" title="relax">relax-1.3.0.src.zip</a></td>
       <td><tt><small>32475228dd4ed201f7dd462f6a001063</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>4735624</td>
@@ -192,34 +267,30 @@
 
     <tr><td><em>Stable 1.2 line</em></td></tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4272519</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4278051</td>
     </tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip" title="relax">relax-1.2.10.Win32.zip</a></td>
-      <td><tt><small>e28724a7c8282b927be9705f83d36d49</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4511199</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
+      <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4271529</td>
     </tr>
     <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2" title="relax">relax-1.2.10.src.tar.bz2</a></td>
-      <td><tt><small>279068ebe2f22be6025e479369267414</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4265245</td>
-    </tr>
-    <tr>
-        <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip" title="relax">relax-1.2.10.src.zip</a></td>
-      <td><tt><small>451e0aa179d4d0b719889238cac5c202</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4529561</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip" title="relax">relax-1.2.11.src.zip</a></td>
+      <td><tt><small>ff5647b89dbd89f2997bf02b444fc08c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4543086</td>
     </tr>
   </tbody>
 </table>
   </div>
 
 
+
+<!-- Security -->
 <div class="main_box">
     <h1>Security</h1>
 
@@ -230,18 +301,121 @@
       <p>where <em>x.x.x</em> is the program version; <em>release_type</em> is one of 'GNU-Linux.i686', 'Win32', or 'src'; and <em>file_type</em> is either 'tar.bz2' or 'zip'.  The GPG program can be downloaded from the <a href='http://www.gnupg.org/'>GNU Privacy Guard</a> web site.</p>
   </div>
 
-  <div class="main_box">
 
+
+<!-- New releases -->
+  <div class="main_box">
     <h1>New releases</h1>
 
       <p>New versions of relax are announced on the relax-announce mailing list.  For a description of this list and instructions on how to subscribe to it, please read the relax <a href="communication.html#mailing-lists">mailing list</a> section of the <a href='communication.html'>communication page</a>.</p>
   </div>
 
-  <div class="main_box">
 
+
+<!-- Old releases -->
+  <div class="main_box">
     <h1>Old releases</h1>
 
-      <p>Older versions of relax can be found on the <a href="http://download.gna.org/relax">relax download site</a>.  Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax new page</a>.</p>
+      <p>Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
+
+      <h2>Unstable 1.3 development line</h2>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+    <tr><td><em>Version 1.3.0</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4445951</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip" title="relax">relax-1.3.0.Win32.zip</a></td>
+      <td><tt><small>b788b38fecee772fe758897a80563205</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4708018</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2" title="relax">relax-1.3.0.src.tar.bz2</a></td>
+      <td><tt><small>ae89221310d0c2ce84f5235d847f1001</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4439939</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip" title="relax">relax-1.3.0.src.zip</a></td>
+      <td><tt><small>32475228dd4ed201f7dd462f6a001063</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4735624</td>
+    </tr>
+
+  </tbody>
+</table>
+
+      <h2>Stable 1.2 line</h2>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.2.11</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4278051</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
+      <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4271529</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip" title="relax">relax-1.2.11.src.zip</a></td>
+      <td><tt><small>ff5647b89dbd89f2997bf02b444fc08c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4543086</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.10</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4272519</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip" title="relax">relax-1.2.10.Win32.zip</a></td>
+      <td><tt><small>e28724a7c8282b927be9705f83d36d49</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4511199</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2" title="relax">relax-1.2.10.src.tar.bz2</a></td>
+      <td><tt><small>279068ebe2f22be6025e479369267414</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4265245</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip" title="relax">relax-1.2.10.src.zip</a></td>
+      <td><tt><small>451e0aa179d4d0b719889238cac5c202</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4529561</td>
+    </tr>
+  </tbody>
+</table>
+
   </div>
 </div>
 
