Added relax versions 1.0.0 to 1.2.9 to the 'Old releases' of the download page.

--- a/download.html
+++ b/download.html
@@ -413,6 +413,284 @@
       <td><a href="http://download.gna.org/relax/relax-1.2.10.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>4529561</td>
     </tr>
+
+    <tr><td><em>Version 1.2.9</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>f719cc0a9fd8b710e28d1c2a5d597aa7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3622068</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip" title="relax">relax-1.2.9.Win32.zip</a></td>
+      <td><tt><small>f14a2a03db3ab3128d1072b5a936f875</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3891094</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2" title="relax">relax-1.2.9.src.tar.bz2</a></td>
+      <td><tt><small>84b0835e1ae2dd885b644bf28433e2c2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3620029</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip" title="relax">relax-1.2.9.src.zip</a></td>
+      <td><tt><small>49891e4aba642a1b7caf05f0f16a54f8</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3838688</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.8</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.8.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>f9b374a51ebc67e5d0fb4880c55c7178</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3623222</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.Win32.zip" title="relax">relax-1.2.8.Win32.zip</a></td>
+      <td><tt><small>4d0aca0828b9ada170264f6dd91cf63b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3890884</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.src.tar.bz2" title="relax">relax-1.2.8.src.tar.bz2</a></td>
+      <td><tt><small>3d76d7b86c19e2c9e7cbb3e6874a9592</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3620269</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.src.zip" title="relax">relax-1.2.8.src.zip</a></td>
+      <td><tt><small>48ae812494d368a6ffaa50475fad57e0</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.8.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3838480</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.7</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.7.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>d6ebbdcad1bd74c6996da8f71f2e3c3d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3578582</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.Win32.zip" title="relax">relax-1.2.7.Win32.zip</a></td>
+      <td><tt><small>817cb06c0e2101498379cb7117ec7c78</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3830275</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.src.tar.bz2" title="relax">relax-1.2.7.src.tar.bz2</a></td>
+      <td><tt><small>6110ba54661f028ee3b72f98c8d8155f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3576129</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.src.zip" title="relax">relax-1.2.7.src.zip</a></td>
+      <td><tt><small>e0d18486bc4414e5bafb5f086a67839a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.7.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>3777870</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.6</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.6.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.6.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>b76909907498fcf35808bfe283b8b0be</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.6.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3574976</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.6.src.tar.bz2" title="relax">relax-1.2.6.src.tar.bz2</a></td>
+      <td><tt><small>9e7ef0ede5adf3882a799d7bd5ecaee9</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.6.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3569737</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.5</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.5.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>6b71bef84131920fc750c9adda06496f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.5.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3573417</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.5.src.tar.bz2" title="relax">relax-1.2.5.src.tar.bz2</a></td>
+      <td><tt><small>53377fda66fdada7fbe2e94a59d9ba0a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>3568111</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.4</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.4.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>af8525cd14611f11392f3fe1846540f4</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1962711</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.4.src.tar.bz2" title="relax">relax-1.2.4.src.tar.bz2</a></td>
+      <td><tt><small>da79f575a695cffd0a129a3520faf8f6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1956355</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.3</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.3.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>f1d1ebee86b8cb1ab8674e56ae1a7c4b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1639317</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.3.src.tar.bz2" title="relax">relax-1.2.3.src.tar.bz2</a></td>
+      <td><tt><small>62420d624abfc382436d3f93f508d448</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1634574</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.2</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.2.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>220e1cc6d434fd944e4053539e6a016c</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1919974</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.2.src.tar.bz2" title="relax">relax-1.2.2.src.tar.bz2</a></td>
+      <td><tt><small>64f3fcbe9a07297532e44ffc1613b4bf</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1771018</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.1</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>3a1ebc7cff791e549634d2f731d306f0</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1612734</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.1.src.tar.bz2" title="relax">relax-1.2.1.src.tar.bz2</a></td>
+      <td><tt><small>7a49c309219421b19fd445c6fd3ef52d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1607384</td>
+    </tr>
+
+    <tr><td><em>Version 1.2.0</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>3227641fc48afddc1156e3aba0719a1b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1612538</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.0.src.tar.bz2" title="relax">relax-1.2.0.src.tar.bz2</a></td>
+      <td><tt><small>17a685be6e70203d1b93f6277d57660b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1606656</td>
+    </tr>
+
+  </tbody>
+</table>
+
+      <h2>Stable 1.0 line</h2>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.0.10</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.10.tar.bz2" title="relax">relax-1.0.10.tar.bz2</a></td>
+      <td><tt><small>3542fde96bd06190f3b99f40e56e31c4</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.10.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1629102</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.9</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.9.tar.bz2" title="relax">relax-1.0.9.tar.bz2</a></td>
+      <td><tt><small>a31d96710c64c40a9df1b392f7bb7fae</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.9.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1628919</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.8</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.8.tar.bz2" title="relax">relax-1.0.8.tar.bz2</a></td>
+      <td><tt><small>ebc56c99b3105b62f62cfc9c0d25b4d6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.8.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1627635</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.7</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.7.tar.bz2" title="relax">relax-1.0.7.tar.bz2</a></td>
+      <td><tt><small>6e13c777bc6e343eb1a96ccd6db8cc88</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.7.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1618929</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.6</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.6.tar.bz2" title="relax">relax-1.0.6.tar.bz2</a></td>
+      <td><tt><small>42a0799a50e3202fc9ba706c4987525a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.6.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1625250</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.5</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.5.tar.bz2" title="relax">relax-1.0.5.tar.bz2</a></td>
+      <td><tt><small>9884e0642aa6e45f3a97f0c9116df43e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.5.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1614901</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.4</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.4.tar.bz2" title="relax">relax-1.0.4.tar.bz2</a></td>
+      <td><tt><small>3bb98541cf86e5bf59b91bc9344f76d2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.4.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1625766</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.3</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.3.tar.bz2" title="relax">relax-1.0.3.tar.bz2</a></td>
+      <td><tt><small>19c27bf042d3e57f5f46d2a032b8c1d7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.3.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1595771</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.2</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.2.tar.bz2" title="relax">relax-1.0.2.tar.bz2</a></td>
+      <td><tt><small>9ac330ca9e45da144861e2b977a15965</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.2.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1596185</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.1</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.1.tar.bz2" title="relax">relax-1.0.1.tar.bz2</a></td>
+      <td><tt><small>d3ac2d9de88b50a28dcac70115ce258a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.1.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>1579897</td>
+    </tr>
+
+    <tr><td><em>Version 1.0.0</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.0.0.tar.bz2" title="relax">relax-1.0.0.tar.bz2</a></td>
+      <td><tt><small>32a9c4a661559f7ba3ef1029ef75ecdd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.0.0.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>197829</td>
+    </tr>
   </tbody>
 </table>
 
