Updated the download page for the 32 bit Windows version of relax 1.2.11.

--- a/download.html
+++ b/download.html
@@ -122,7 +122,7 @@
 <!-- MS Windows -->
     <div class="main_h2">
       <h2>MS Windows</h2>
-      <p>The pre-compiled binary release for 32 and 64 bit Windows can be downloaded from the link below.</p>
+      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.</p>
 
 <table cellspacing="10">
   <tbody>
@@ -133,10 +133,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip" title="relax">relax-1.2.10.Win32.zip</a></td>
-      <td><tt><small>e28724a7c8282b927be9705f83d36d49</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.10.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4511199</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip" title="relax">relax-1.2.11.Win32.zip</a></td>
+      <td><tt><small>5490aae974963c7aed096cee8d8d837a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4525219</td>
     </tr>
   </tbody>
 </table>
@@ -279,6 +279,12 @@
       <td>4278051</td>
     </tr>
     <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip" title="relax">relax-1.2.11.Win32.zip</a></td>
+      <td><tt><small>5490aae974963c7aed096cee8d8d837a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4525219</td>
+    </tr>
+    <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
       <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
@@ -386,6 +392,12 @@
       <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>4278051</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip" title="relax">relax-1.2.11.Win32.zip</a></td>
+      <td><tt><small>5490aae974963c7aed096cee8d8d837a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4525219</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
